// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get orgs state 1`] = `
Object {
  "isFetching": false,
  "name": "",
  "repos": Array [],
}
`;

exports[`should get users state 1`] = `
Object {
  "name": "",
}
`;
